--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
       "Sometimes I see something beautiful and instantly wish you were there to see it too.",
       "You have this quiet way of making everything better just by being in it.",
       "I don't need to be there to know you're looking amazing today.",
-      "Happy 18th to the girl who's always on my mind, no matter the distance.",
+      "Happy 18th to the girl who's always on my heart & mind , no matter the distance.",
       "May this year be full of all the things that make you laugh.",
-      "You’re 18 now—the world is officially yours. Take care of it.",
+      "There is a lot of things to say i just want to say, Lots's o biryani/methi.",
       "I'm lucky to know you, even if it's from a few time zones away.",
       "Here’s to you, Dyaan. Today and every day."
     ];
