--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <style>
+    /* Ready */
     :root {
       --primary-purple: #2d0b5a;
       --light-purple: #9d50bb;
