--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <h2 style="font-size: 0.6rem; letter-spacing: 4px; color: var(--light-purple); margin-bottom: 10px;">AUTHORIZED
         ACCESS ONLY</h2>
       <h1>The <span class="purple-text">18th</span> Verse</h1>
-      <input type="text" id="nameInput" placeholder="Enter her name..." />
+      <input type="text" id="nameInput" placeholder="Enter name..." />
       <button class="btn-action" onclick="checkName()">Unlock Gallery</button>
       <p id="errorMsg" style="margin-top: 15px; font-size: 0.75rem; color: #ff4d4d;"></p>
     </div>
